--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -9,6 +9,15 @@ AddCharset utf-8 .html .css .php .txt .js
 
 RewriteEngine On
 
+## TODO Posibilidad 6: redireccionar el contenido publicado en el Sistema LTI
+## https://stackoverflow.com/questions/57356938/apache-is-adding-javascript-in-html-file
+## https://serverfault.com/questions/46449/how-to-inject-html-code-into-every-delivered-html-page
+RewriteCond %{REQUEST_URI} ^jwt_token=([0-9a-zA-Z.]*) [OR]
+RewriteCond %{QUERY_STRING} ^jwt_token=([0-9a-zA-Z.]*)
+##RewriteCond %{HTTP_REFERER} !^http://www.mysite.com/.*
+##RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
+##RewriteRule ^/publicacion/1(.*)$ /lti13/publicacion/9$1 [L,R]
+RewriteRule ^(.*)$ /lti13/lms/embed.php?path=$1 [QSA,L,R]
 
 ## TODO+NE Posibilidad 3: limitar acceso vía GET a las carpetas publicación/ mediante: URL redirección Servidor LTI (HTTP_REFERER==launch/login/publish/diffusion.php)
 ## https://stackoverflow.com/questions/922399/how-to-use-and-or-for-rewritecond-on-apache
@@ -27,8 +36,8 @@ RewriteEngine On
 #RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(uploads/publicacion/|publicacion/|lti/publicacion/)(.*) [OR]
 #RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(lti/|)(lti13|publicacion/|lti/publicacion/|)(lms/|lms/giccu/|[a-f,0-9]{24}/|)(publish|launch|dl|diffusion|)(.php|.*|)
 #RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es(:9002|)/(lti13/|lti/lti13/|)(lms/|lms/giccu/|)(publish|login|launch|dl|diffusion|)(.php|)
-
-RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es
+RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es/(lti/|lti/lti13/|)(publicacion/[a-f,0-9]{24}|/)(/xml/|/lms/|/lms/giccu/|/|)(publish|launch|dl|diffusion|index|launch|login|publish|)(.php|.html|) [OR]
+RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es [OR]
 RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31
 #RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
 #RewriteRule .* - [F,L]
