--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -19,7 +19,34 @@ RewriteCond %{QUERY_STRING} ^jwt_token=([0-9a-zA-Z.]*)
 ##RewriteRule ^/publicacion/1(.*)$ /lti13/publicacion/9$1 [L,R]
 RewriteRule ^(.*)$ /lti13/lms/embed.php?path=$1 [QSA,L,R]
 
+## TODO+NE Posibilidad 3: limitar acceso vía GET a las carpetas publicación/ mediante: URL redirección Servidor LTI (HTTP_REFERER==launch/login/publish/diffusion.php)
+## https://stackoverflow.com/questions/922399/how-to-use-and-or-for-rewritecond-on-apache
+# [HTTP_X_FORWARDED_FOR] => 10.201.54.141
+# [HTTP_X_FORWARDED_HOST] => ailanto-dev.intecca.uned.es
+# [HTTP_X_FORWARDED_SERVER] => ailanto-dev.intecca.uned.es
+## http://tltech.com/info/referrer-htaccess/
+#RewriteCond %{HTTP_REFERER} !^http://www.mysite.com/.*
+#RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
+## https://serverfault.com/questions/1011090/how-to-set-the-http-referrer-in-a-htaccess-redirect
+# RewriteCond %{SERVER_NAME} !^ailanto-dev.intecca.uned.es
+#RewriteCond %{HTTP_HOST} !^ailanto-dev.intecca.uned.es [OR]
+#RewriteCond %{HTTP_HOST} !^agora.uned.es [OR]
+#RewriteCond %{HTTP_HOST} !^agora.uned.es
+#RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(uploads/publicacion/|publicacion/|lti/publicacion/)(.*) [OR]
+#RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(lti/|)(lti13|publicacion/|lti/publicacion/|)(lms/|lms/giccu/|[a-f,0-9]{24}/|)(publish|launch|dl|diffusion|)(.php|.*|)
+#RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es(:9002|)/(lti13/|lti/lti13/|)(lms/|lms/giccu/|)(publish|login|launch|dl|diffusion|)(.php|)
+RewriteCond %{HTTP_REFERER} !^//ailanto-dev.intecca.uned.es/(lti/|lti/lti13/|)(publicacion/[a-f,0-9]{24}|/)(/xml/|/lms/|/lms/giccu/|/|)(publish|launch|dl|diffusion|index|launch|login|publish|)(.php|.html|) [OR]
+RewriteCond %{HTTP_REFERER} !^ailanto-dev.intecca.uned.es/.* [OR]
+RewriteCond %{HTTP_REFERER} !^10.201.54.31/.* [OR]
+#RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
+#RewriteRule .* - [F,L]
+#RewriteRule .* - [R=408,L]
+RewriteRule .* - [R=405,L]
 
+## http://stackoverflow.com/questions/37769960/ddg#37770158
+#ErrorDocument 408 %{HTTP_REFERER}
+#ErrorDocument 405 "Access Not Allowed"
+ErrorDocument 405 https://ailanto-dev.intecca.uned.es/lti/lti13/lms/giccu/error.php?value=%{HTTP_REFERER}&value0=%{HTTP_HOST}&value1=%{REMOTE_ADDR}
 
 ## TODO+NE Incidencia `blocked by CORS policy`
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
